# Infecdead-SDL

./: .gitignore  .gitmodules  CMakeLists.txt  todo.md
res/maps/: outside.json  world.json
src/: common.hpp  main.cpp
src/animation/: animation.hpp  fade.cpp  fade.hpp  logo.cpp  logo.hpp  spritesheet_animation.cpp  spritesheet_animation.hpp
src/game/: camera.cpp  camera.hpp  game.cpp  game.hpp
src/game/entity/: character.cpp  character.hpp  player.cpp  player.hpp
src/game/state/: logo_state.cpp  logo_state.hpp  main_menu_state.cpp  main_menu_state.hpp  play_state.cpp  play_state.hpp  state.hpp
src/graphics/: shapes.cpp  shapes.hpp  spritesheet.cpp  spritesheet.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
src/map/: layer.cpp  layer.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp
src/ui/: button_group.cpp  button_group.hpp  inventory_slot.cpp  inventory_slot.hpp
src/utility/: log.cpp  log.hpp  utility.hpp
tools/: build.sh
